--- a/index.html
+++ b/index.html
@@ -17,16 +17,31 @@
             font-family: "Poppins", sans-serif;
         }
     </style>
+
+    <!-- customize config -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                'btn-org': '#E76F51',
+              }
+            }
+          }
+        }
+      </script>
 </head>
 <body class="font">
 
-    <header class="container mx-auto">
+    <!-- style the header section -->
+    <header class="md:container mx-auto mb-[160px]">
 
         <!-- navbar -->
-        <nav class="">
+        <nav class="mt-6 mb-12">
 
             <div class="navbar bg-base-100 ">
-                <div class="navbar-start">
+                <div class="flex-1">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                       <svg
@@ -50,8 +65,8 @@
                       <li><a>News</a></li>
                       <li><a>Contact</a></li>
                     </ul>
-                  </div>
-                  <a class="btn btn-ghost text-xl">Biker ZONE</a>
+                  </div >
+                  <a class="font-bold text-2xl">Biker ZONE</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
@@ -61,15 +76,94 @@
                       <li><a>Contact</a></li>
                   </ul>
                 </div>
-                <div class="navbar-end">
-                  <a class="btn btn-error text-white">Login</a>
+                <div class="">
+                  <a class="btn btn-error bg-btn-org text-white">Login</a>
                 </div>
               </div>
         </nav>
 
+        <!-- slider/carousel -->
+        <div class="carousel w-full bg-[#E76F511A] lg:h-[550px]">
+
+            <!-- slide 1 -->
+            <div id="slide1" class="carousel-item relative w-full ">
+              <div class="lg:flex p-11 md:p-12 lg:p-24">
+                <!-- text content -->
+                <div class="flex-1 ">
+                    <h1 class="text-7xl font-bold ">Ride-on R15 V4 with Smile</h1>
+                    <p class="text-base font-light my-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn btn-error bg-btn-org text-white">Purchase</button>
+                </div>
+                <!-- img content -->
+                <div class="flex-1 flex justify-center ">
+                    <img src="./images/slider/bike1.png" class="w-[350px]" />
+                </div>
+              </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide3" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+
+            <!-- slide 2 -->
+            <div id="slide2" class="carousel-item relative w-full ">
+                <div class="lg:flex p-11 md:p-12 lg:p-24">
+                  <!-- text content -->
+                  <div class="flex-1 ">
+                      <h1 class="text-7xl font-bold">Ride-on R15 V4 with Smile</h1>
+                      <p class=" font-light my-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                          <button class="btn btn-error bg-btn-org text-white">Purchase</button>
+                  </div>
+                  <!-- img content -->
+                  <div class="flex-1 flex justify-center ">
+                      <img src="./images/slider/bike2.png" class="w-[350px]" />
+                  </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                  <a href="#slide1" class="btn btn-circle">❮</a>
+                  <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+              </div>
+
+              <!-- slide 3 -->
+            <div id="slide3" class="carousel-item relative w-full ">
+                <div class="lg:flex p-11 md:p-12 lg:p-24 ">
+                  <!-- text content -->
+                  <div class="flex-1 ">
+                      <h1 class="text-7xl font-bold">Ride-on R15 V4 with Smile</h1>
+                      <p class=" font-light my-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                          <button class="btn btn-error bg-btn-org text-white">Purchase</button>
+                  </div>
+                  <!-- img content -->
+                  <div class="flex-1 flex justify-center ">
+                      <img src="./images/slider/bike3.png" class="w-[350px] " />
+                  </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                  <a href="#slide2" class="btn btn-circle">❮</a>
+                  <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+              </div>
+
+        </div>
+
     </header>
 
-    <main>
+    <main class="md:container md:mx-auto">
+
+        <!-- featured bike section -->
+         <section class=" mb-32">
+            <div class="w-max mx-auto text-center mb-11">
+                <h3 class="text-5xl font-semibold">Fetured Bikes In This Year</h3>
+                <small class="text-[14px] font-semibold text-[#E76F51] border-b-2">Best bike collection</small>
+            </div>
+
+            <div class="lg:flex justify-around ">
+                <img class="grayscale" src="./images/others/feature-bike.png" alt="">
+                <img  src="./images/others/feature-bike.png" alt="">
+                <img class="grayscale"  src="./images/others/feature-bike.png" alt="">
+            </div>
+         </section>
 
     </main>
 
