happy client section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- daisy ui cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awesome cdn -->
+    <script src="https://kit.fontawesome.com/a4b6285254.js" crossorigin="anonymous"></script>
     <!-- google font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -222,9 +224,80 @@
           </section>
 
           <!-- happy clients section -->
-           <section class="">
+           <section class="mb-16 lg:mb-40">
             <h3 class="text-center text-5xl font-semibold text-[#0A0826] mb-11">Happy <span class="text-[#E76F51]">Clients says</span></h3>
-
+            <!-- card container -->
+             <div class="lg:grid grid-cols-3 gap-5 space-y-5 lg:space-y-0">
+              <!-- card 1 -->
+               <div class="py-10 px-9 rounded-md border-2 text-center">
+                <!-- img content -->
+                <figure >
+                  <img class="mx-auto size-40" src="./images/others/user-1.png" alt="">
+                </figure>
+                <!-- text content -->
+                 <div class="mt-8 space-y-4">
+                  <p>Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p>
+                    <div class="text-orange-400">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="text-[#23A6F0] font-semibold">Regina Miles</h4>
+                    <h4 class="text-[#252B42] font-semibold">Banker</h4>
+                 </div>
+               </div>
+              <!-- card 2 -->
+              <div class="py-10 px-9 rounded-md border-2 text-center">
+                <!-- img content -->
+                <figure >
+                  <img class="mx-auto size-40" src="./images/others/user-2.png" alt="">
+                </figure>
+                <!-- text content -->
+                 <div class="mt-8 space-y-4">
+                  <p>Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p>
+                    <div class="text-orange-400">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="text-[#23A6F0] font-semibold">Regina Miles</h4>
+                    <h4 class="text-[#252B42] font-semibold ">Banker</h4>
+                 </div>
+               </div>
+              <!-- card 3 -->
+              <div class="py-10 px-9 rounded-md border-2 text-center">
+                <!-- img content -->
+                <figure >
+                  <img class="mx-auto size-40" src="./images/others/user-3.png" alt="">
+                </figure>
+                <!-- text content -->
+                 <div class="mt-8 space-y-4">
+                  <p>Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p>
+                    <div class="text-orange-400">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h4 class="text-[#23A6F0] font-semibold">Regina Miles</h4>
+                    <h4 class="text-[#252B42] font-semibold">Banker</h4>
+                 </div>
+               </div>
+             </div>
            </section>
 
     </main>
