FAQ section done

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
          <!-- latest news section -->
           <section class="mb-20 lg:mb-40">
-            <h3 class="text-center text-5xl font-semibold text-[#0A0826] mb-11">latest News</h3>
+            <h3 class="text-center text-5xl font-semibold text-[#0A0826] mb-11">Latest News</h3>
             <!-- card container -->
              <div class="lg:grid grid-cols-3 gap-5 space-y-5 lg:space-y-0">
               <!-- card 1 -->
@@ -193,7 +193,7 @@
                 <figure>
                   <img
                     class=" mt-5"
-                    src="./images/others/latest1.png"
+                    src="./images/others/latest2.png"
                     alt="Shoes" />
                 </figure>
                 <div class="card-body">
@@ -209,7 +209,7 @@
                 <figure>
                   <img
                     class=" mt-5"
-                    src="./images/others/latest1.png"
+                    src="./images/others/latest3.png"
                     alt="Shoes" />
                 </figure>
                 <div class="card-body">
@@ -299,6 +299,51 @@
                </div>
              </div>
            </section>
+
+           <!-- FAQ section -->
+            <section class="mb-16 lg:mb-36">
+            <h3 class="text-center text-5xl font-semibold text-[#0A0826] mb-11">Frequently Asked <span class="text-[#E76F51]">Questions</span></h3>
+            <!-- img and accordion container -->
+             <div class="lg:flex justify-between gap-[92px]">
+              <!-- img content -->
+                <img class="" src="./images/others/faq.png" alt="img">
+              <!-- FAQ CONTENT -->
+              <div class=" space-y-4 mt-8">
+
+                <div class="collapse collapse-arrow border border-[#D5E5FB] rounded-md">
+                  <input type="radio" name="my-accordion-2" checked="checked" />
+                  <div class="collapse-title text-xl font-medium">What are the most important things I should
+                    know about riding a bike?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-arrow border border-[#D5E5FB] rounded-md">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                    new one?</div>
+                  <div class="collapse-content">
+                    <p>Check helmet age, damage, and wear for safety; replace when necessary.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-arrow border border-[#D5E5FB] rounded-md">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                  <div class="collapse-content">
+                    <p>Inspect your bike for tire pressure, rust, and brake functionality. Lubricate the chain and ensure all parts are secure before riding again.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-arrow border border-[#D5E5FB] rounded-md">
+                  <input type="radio" name="my-accordion-2" />
+                  <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                  <div class="collapse-content">
+                    <p>Always wear a helmet, follow traffic signals, use hand signals for turns, ride in bike lanes when available, stay visible, and regularly check your bike's condition.</p>
+                  </div>
+                </div>
+              </div>
+             </div>
+
+            </section>
 
     </main>
 
